syntax = "proto3";

package playground.v1;

import "playground/v1/name.proto";

option csharp_namespace = "org.v1.Protobuf";

/*
 Sample Documentation
*/
message MessageSample {

  //topic field documentation
  int32 topic = 1;

  //name field documentation
  playground.v1.Name name = 2;
}
